docs/.vuepress/styles/overrides.less
@import (reference) '../../../lib/build/less/variables/colors';
@import (reference) '../../../lib/build/less/variables/typography';
@import (reference) '../../../lib/build/less/variables/spacing';
@import (reference) '../../../lib/build/less/utilities/internals';
@import (reference) '../../../lib/build/less/utilities/spacing';
@import (reference) '../../../lib/build/less/utilities/typography';

body {
  --sidebar-width: unset;
}

:root {
  --c-brand: @purple-500;
  --navbar-height: 6.4rem;
}

.page {
  padding-top: 0;
  padding-left: var(--sidebar-width) ;
}

.theme-default-content {
  max-width: 75rem !important;

  p, ol, ul {
    margin-top: var(--su16);
  }

  h2 {
    margin-top: var(--su64) !important;

    font-weight: var(--fw-bold);
    font-size: var(--fs24);

    border-bottom: unset;
  }

  h2, h3 {
    font-weight: var(--fw-bold);
    padding-top: 0 !important;
  }

  h3 {
    margin-top: var(--su16) !important;
    font-size: unset;
  }

  ol, ul {
    .d-stack8();
    padding-left: revert;
  }
}

@media screen and (max-width: 719px) {
  .page {
    padding: 0 !important;
  }
}

@media (max-width: 959px) {
  .page {
    padding-left: var(--sidebar-width-mobile) ;
  }
}

